--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
 					<svg class="bd-placeholder-img" width="100%" height="100%"
 						xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#777" /></svg>
-
+						<rect width="100%" height="100%" fill="#999" /></svg>
+					<div class="carousel-caption text-start">
+					<img class="bd-placeholder-img" src="./images/consore_2020_EN.JPG" width="60%" />
 					<div class="container">
-						<div class="carousel-caption text-start">
 							<h1>Example headline.</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget
 								quam. Donec id elit non mi porta gravida at eget metus. Nullam
 								id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p>
-								<a class="btn btn-lg btn-primary" href="#" role="button">Sign
-									up today</a>
-							</p>
+<!-- 							<p> -->
+<!-- 								<a class="btn btn-lg btn-primary" href="#" role="button">Sign -->
+<!-- 									up today</a> -->
+<!-- 							</p> -->
 						</div>
 					</div>
 				</div>
@@ -117,10 +117,10 @@
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget
 								quam. Donec id elit non mi porta gravida at eget metus. Nullam
 								id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p>
-								<a class="btn btn-lg btn-primary" href="#" role="button">Learn
-									more</a>
-							</p>
+<!-- 							<p> -->
+<!-- 								<a class="btn btn-lg btn-primary" href="#" role="button">Learn -->
+<!-- 									more</a> -->
+<!-- 							</p> -->
 						</div>
 					</div>
 				</div>
@@ -157,20 +157,17 @@
 		<!-- Wrap the rest of the page in another container to center all the content. -->
 
 		<div class="container marketing">
+			<a name="about"></a>
 			<div class="row">
 				<div class="col-md-7">
-					<h2 class="featurette-heading">La Data Factory, une équipe au
-						sein de la Direction des Données</h2>
-					<p class="lead">Créée en 2017 à l'Institut Curie, La Direction
-						des Données a une mission transversale sur la gouvernance des
-						données de l’Institut Curie, elle travaille en étroite
-						collaboration avec les équipes locales et les partenaires externes
-						pour optimiser l’accès et l'exploitation des données et ainsi
-						créer de la valeur. Au sein de cette Direction, la Data Factory
-						pilote la mise en oeuvre de tous les projets innovants sur les
-						données de santé allant de la construction de grands entrepôts de
-						données au développement de services innovants et de projets
-						d'intelligence artificielle</p>
+					<h2 class="featurette-heading">The Data Factory, a team within the Data Office</h2>
+					<p class="lead">Created in 2017 at Institut Curie, the Data Office 
+						has a tranversal mission on the data governance. The department works
+						closely with local teams and external partners for optimizing data access
+						and data exploration in order to create value. Within the department,
+						the Data Factory is in charge of the implementation of all the innovative
+						projects on health data from big data warehouses building to research
+						services development including artificial intelligence projects.</p>
 				</div>
 				<div class="col-md-5">
 					<!--         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
@@ -182,7 +179,7 @@
 			<!-- Three columns of text below the carousel -->
 			<div class="row">
 				<div class="col-lg-12">
-					<h1 style="color: #FF6F00;">The Data Factory</h1>
+					<i class="bi-gear" style="font-size: 1.8rem; color: orange; float: left; padding-right: 16px;"></i><h1 style="color: #FF6F00;">The Data Factory</h1>
 					<br />
 				</div>
 			</div>
@@ -191,15 +188,13 @@
 					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
 					<img src="./images/julien-circle.png" width="140" />
 					<h2 style="color: #FF6F00;">Julien Guérin</h2>
+					<p><i>Head of Data Factory</i></p>
 					<p>
-						Donec sed odio dui. Etiam porta sem malesuada magna mollis
-						euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
-						Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-						Praesent commodo cursus magna. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-twitter" style="font-size: 1.2rem; color: orange;"></i>
+						After a master <br />
+						<a href="mailto:julien.guerin@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
+						<a href="https://github.com/juguerin" target="_blank"><i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
+						<a href="https://www.linkedin.com/in/julien-guerin-2832213a/"><i class="bi-linkedin" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
+						<a href="https://twitter.com/Juli1Guerin"><i class="bi-twitter" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -208,13 +203,14 @@
 					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
 					<img src="./images/thomas-circle.png" width="140" />
 					<h2 style="color: #FF6F00;">Thomas Balezeau</h2>
+					<p><i>Data Engineer</i></p>
 					<p>
 						Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
 						eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
 						amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor
 						mauris condimentum nibh. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange;"></i>
+						<i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -226,14 +222,15 @@
 					<img src="./images/oliver-circle.png" width="140" />
 
 					<h2 style="color: #FF6F00;">Oliver Hijano-Cubelos</h2>
+					<p><i>Data Scientist</i></p>
 					<p>
 						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
 						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange;"></i>
+						<i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -243,14 +240,15 @@
 					<img src="./images/armand-circle.png" width="140" />
 
 					<h2 style="color: #FF6F00;">Armand Léopold</h2>
+					<p><i>DevOps Architect</i></p>
 					<p>
 						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
 						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange;"></i>
+						<i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
 					</p>
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
