--- a/index.html
+++ b/index.html
@@ -90,18 +90,15 @@
 					<svg class="bd-placeholder-img" width="100%" height="100%"
 						xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#999" /></svg>
+						<rect width="100%" height="100%" fill="#FFB74D" /></svg>
 					<div class="carousel-caption text-start">
-					<img class="bd-placeholder-img" src="./images/consore_2020_EN.JPG" width="60%" />
-					<div class="container">
-							<h1>Example headline.</h1>
-							<p>Cras justo odio, dapibus ac facilisis in, egestas eget
-								quam. Donec id elit non mi porta gravida at eget metus. Nullam
-								id dolor id nibh ultricies vehicula ut id elit.</p>
-<!-- 							<p> -->
-<!-- 								<a class="btn btn-lg btn-primary" href="#" role="button">Sign -->
-<!-- 									up today</a> -->
-<!-- 							</p> -->
+						<img style="float: right; padding-left: 15px;" class="bd-placeholder-img" src="./images/consore_2020_EN.JPG" width="60%" />
+						<div class="container">
+							<h1>#Consore, 2020.</h1>
+							<p>Discover the new features of our Unicancer powerful search engine : better concepts detection, list of available images, survival curves and many others.</p>
+							<p>
+								<a class="btn btn-lg" style="background-color:#FB8C00; color:white;" href="#" role="button">Discover</a>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -109,18 +106,17 @@
 					<svg class="bd-placeholder-img" width="100%" height="100%"
 						xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#777" /></svg>
+						<rect width="100%" height="100%" fill="#AED581" /></svg>
 
 					<div class="container">
 						<div class="carousel-caption">
-							<h1>Another example headline.</h1>
+							<h1>Our DevOps philosophy</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget
 								quam. Donec id elit non mi porta gravida at eget metus. Nullam
 								id dolor id nibh ultricies vehicula ut id elit.</p>
-<!-- 							<p> -->
-<!-- 								<a class="btn btn-lg btn-primary" href="#" role="button">Learn -->
-<!-- 									more</a> -->
-<!-- 							</p> -->
+							<p>
+								<a class="btn btn-lg" style="background-color:#43A047; color:white;" href="#" role="button">Learn more</a>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -128,7 +124,7 @@
 					<svg class="bd-placeholder-img" width="100%" height="100%"
 						xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#777" /></svg>
+						<rect width="100%" height="100%" fill="#B2DFDB" /></svg>
 
 					<div class="container">
 						<div class="carousel-caption text-end">
@@ -189,12 +185,12 @@
 					<img src="./images/julien-circle.png" width="140" />
 					<h2 style="color: #FF6F00;">Julien Guérin</h2>
 					<p><i>Head of Data Factory</i></p>
-					<p>
-						After a master <br />
-						<a href="mailto:julien.guerin@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
-						<a href="https://github.com/juguerin" target="_blank"><i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
-						<a href="https://www.linkedin.com/in/julien-guerin-2832213a/"><i class="bi-linkedin" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
-						<a href="https://twitter.com/Juli1Guerin"><i class="bi-twitter" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i></a>
+					<p style='text-align: justify;'>
+						"After a master degree in Bioinformatics, I spent several years in IT consulting (Capgemini) working on big IT architectures for public ministries. I joined Institut Curie in 2013 to develop an institutional strategy for biological and clinical data integration and analysis."<br />
+						<a href="mailto:julien.guerin@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="https://github.com/juguerin" target="_blank"><i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="https://www.linkedin.com/in/julien-guerin-2832213a/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="https://twitter.com/Juli1Guerin"><i class="bi-twitter" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -209,8 +205,8 @@
 						eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
 						amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor
 						mauris condimentum nibh. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<a href="mailto:thomas.balezeau@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -228,9 +224,9 @@
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
 						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<a href="mailto:oliver.hijano-cubelos@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -246,9 +242,9 @@
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
 						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
-						<i class="bi-envelope" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
-						<i class="bi-github" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: orange; padding-right: 7px;"></i>
+						<a href="mailto:armand.leopold@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 					</p>
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
@@ -258,6 +254,38 @@
 			<!-- /.row -->
 
 			<!-- START THE FEATURETTES -->
+			<a name="publications"></a>
+			<hr class="featurette-divider">
+			<!-- Three columns of text below the carousel -->
+			<div class="row">
+				<div class="col-lg-12">
+					<i class="bi-bookmarks" style="font-size: 1.8rem; color: orange; float: left; padding-right: 16px;"></i><h1 style="color: #FF6F00;">Publications</h1>
+					<br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<a href="https://doi.org/10.3390/cancers12102943"><b>No impact of smoking status on breast cancer tumor infiltrating lymphocytes, response to neoadjuvant chemotherapy and prognosis</b></a><br/>
+					Simon V, Laot L, Laas E, Rozette S, <u>Guerin J</u>, <u>Balezeau T</u>, Nicolas M, Pierga JY, Coussy F, Laé M, De Croze D, Grandal B, Abecassis J, Dumas E, 
+					Lerebours F, Reyal F, Hamy AS.
+					<i>Cancers (Basel). 2020 Oct 12;12(10):2943. doi: 10.3390/cancers12102943.</i>
+					<br/><br/>
+					<a href="https://doi.org/10.1080/2162402x.2019.1677427"><b>Comedications influence immune infiltration and pathological response to neoadjuvant chemotherapy in breast cancer</b></a><br/>
+					Hamy AS, Derosa L, Valdelièvre C, Yonekura S, Opolon P, Priour M, <u>Guerin J</u>, Pierga JY, Asselain B, De Croze D, Pinheiro A, Lae M, Talagrand LS, 
+					Laas E, Darrigues L, Grandal B, Marangoni E, Montaudon E, Kroemer G, Zitvogel L, Reyal F.
+					<i>Oncoimmunology. 2019 Nov 14;9(1):1677427. doi: 10.1080/2162402X.2019.1677427.</i>
+					<br/><br/>
+					<a href="https://doi.org/10.1200/cci.19.00031"><b>Text mining in electronic medical records enables quick and efficient identification of pregnancy cases occurring after breast cancer</b></a><br/>
+					Labrosse J, Lam GT, Sebbag C, Benque M, Abdennebi I, Merckelbagh H, Osdoit M, Priour M, <u>Guerin J</u>, <u>Balezeau T</u>, Grandal B, Coussy F, Bobrie A, Ferrer L,
+					Laas E, Feron JG, Reyal F, Hamy AS.
+					<i>JCO Clin Cancer Inform. 2019 Oct;3:1-12. doi: 10.1200/CCI.19.00031.</i>
+					<br/><br/>
+					<a href="https://doi.org/10.1007/s10549-017-4610-0"><b>Lymphovascular invasion after neoadjuvant chemotherapy is strongly associated with poor prognosis in breast carcinoma</b></a><br/>
+					Hamy AS, Lam GT, Laas E, Darrigues L, <u>Balezeau T</u>, <u>Guerin J</u>, Livartowski A, Sadacca B, Pierga JY, Vincent-Salomon A, Coussy F, Becette V, 
+					Bonsang-Kitzis H, Rouzier R, Feron  JG, Benchimol G, Laé M, Reyal F. 
+					<i>Breast Cancer Res Treat. 2018 Jun;169(2):295-304. doi: 10.1007/s10549-017-4610-0.</i>
+				</div>
+			</div>
 			<a name="news"></a>
 			<hr class="featurette-divider">
 			<div class="row featurette">
