--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
 
 					<h2 style="color: #FF6F00;">Armand Léopold</h2>
 					<p><i>DevOps Architect</i></p>
-					<p>
-						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
-						egestas eget quam. Vestibulum id ligula porta felis euismod
-						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
+					<p>At the end of my Engineering degree, I have worked in different sectors, from Finance and Marketing to Aerospace and Defense, I have gathered knowledge on those different experiences and taken the most valuable lessons from them. <br /><br />
+					Surfing on the wave of data science and machine learning, I finally decided to involve myself in a global and universal cause : Healthcare. <br /><br />
+					Arrived at the Institut Curie on 2nd of April 2019 to work on a project of a Federated Machine learning platform, I have since, expanded my duties within the Data Factory.<br /><br />
+					Know I assume the function of DevOps Architect, making sure all our data pipelines & development workflow run smoothly, securely and reliably.
+						<br />
 						<a href="mailto:armand.leopold@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
