--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
 						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
 						<a href="mailto:armand.leopold@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<a href="https://github.com/armandleopold"><i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="https://www.linkedin.com/in/armandleopold/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
