--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 					<div class="carousel-caption text-start">
 						<img style="float: right; padding-left: 15px;" class="bd-placeholder-img" src="./images/consore_2020_EN.JPG" width="50%" />
 						<div class="container">
-							<h1>#Consore, 2020.</h1>
-							<p>Discover the new features of our Unicancer powerful search engine : better concepts detection, list of available images, survival curves and many others.</p>
+							<h1>Pitch'Unicancer : (re)découvrez #Consore!</h1>
+							<p>Discover the features of our Unicancer powerful search engine</p>
 							<p>
-								<a class="btn btn-lg" style="background-color:#FB8C00; color:white;" href="#" role="button">Discover</a>
+								<a class="btn btn-lg" style="background-color:#FB8C00; color:white;" href="https://www.youtube.com/watch?v=siQqInkygmk" role="button">Discover</a>
 							</p>
 						</div>
 					</div>
@@ -110,32 +110,14 @@
 
 					<div class="container">
 						<div class="carousel-caption">
-							<h1>Our DevOps philosophy</h1>
-							<p>Cras justo odio, dapibus ac facilisis in, egestas eget
-								quam. Donec id elit non mi porta gravida at eget metus. Nullam
-								id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p>
-								<a class="btn btn-lg" style="background-color:#43A047; color:white;" href="#" role="button">Learn more</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<svg class="bd-placeholder-img" width="100%" height="100%"
-						xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-						preserveAspectRatio="xMidYMid slice" focusable="false">
-						<rect width="100%" height="100%" fill="#B2DFDB" /></svg>
-
-					<div class="container">
-						<div class="carousel-caption text-end">
-							<h1>One more for good measure.</h1>
-							<p>Cras justo odio, dapibus ac facilisis in, egestas eget
-								quam. Donec id elit non mi porta gravida at eget metus. Nullam
-								id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p>
-								<a class="btn btn-lg btn-primary" href="#" role="button">Browse
-									gallery</a>
-							</p>
+							<img style="float: right; padding-left: 15px;" class="bd-placeholder-img" src="./images/MeetUp_FHIR-ArkhnxInstitutCurie.png" width="50%" />
+							<div class="container">
+								<h1>Meetup FHIR France #8</h1>
+								<p>How we are involved in data standardization for data sharing in oncology.</p>
+								<p>
+									<a class="btn btn-lg" style="background-color:#43A047; color:white;" href="https://www.youtube.com/watch?v=1xjuEJeaY08" role="button">Watch it!</a>
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -250,6 +232,24 @@
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
 				<!-- /.col-lg-4 -->
+				<div class="col-lg-6">
+					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+					<img src="./images/armand-circle.png" width="140" />
+
+					<h2 style="color: #FF6F00;">Jessica Henao Henao</h2>
+					<p><i>Data Scientist / Student</i></p>
+					<p>
+						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
+						egestas eget quam. Vestibulum id ligula porta felis euismod
+						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
+						<a href="mailto:jessica.henao-henao@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+					</p>
+
+					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+				</div>
 			</div>
 			<!-- /.row -->
 
