--- a/index.html
+++ b/index.html
@@ -249,18 +249,17 @@
 						<i>DevOps Architect</i>
 					</p>
 					<p>
-						At the end of my Engineering degree, I have worked in different
+						"At the end of my Engineering degree, I have worked in different
 						sectors, from Finance and Marketing to Aerospace and Defense, I
 						have gathered knowledge on those different experiences and taken
-						the most valuable lessons from them. <br /> <br /> Surfing on
+						the most valuable lessons from them. Surfing on
 						the wave of data science and machine learning, I finally decided
-						to involve myself in a global and universal cause : Healthcare. <br />
-						<br /> Arrived at the Institut Curie on 2nd of April 2019 to work
+						to involve myself in a global and universal cause : Healthcare.
+						Arrived at the Institut Curie on 2nd of April 2019 to work
 						on a project of a Federated Machine learning platform, I have
-						since, expanded my duties within the Data Factory.<br /> <br />
-						Now I assume the function of DevOps Architect, making sure all our
+						since, expanded my duties within the Data Factory. Now I assume the function of DevOps Architect, making sure all our
 						data pipelines & development workflow run smoothly, securely and
-						reliably. <br /> <a href="mailto:armand.leopold@curie.fr"><i
+						reliably."<br /> <a href="mailto:armand.leopold@curie.fr"><i
 							class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<a href="https://github.com/armandleopold"><i
@@ -276,10 +275,28 @@
 				<!-- /.col-lg-4 -->
 				<div class="col-lg-6">
 					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/armand-circle.png" width="140" />
+					<img src="./images/jessica-circle.png" width="140" />
 
 					<h2 style="color: #FF6F00;">Jessica Henao Henao</h2>
 					<p><i>Data Scientist / Student</i></p>
+					<p>
+						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
+						egestas eget quam. Vestibulum id ligula porta felis euismod
+						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
+						<a href="mailto:jessica.henao-henao@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+					</p>
+
+					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+				</div>
+				<div class="col-lg-6">
+					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+					<img src="./images/johan-circle.png" width="140" />
+
+					<h2 style="color: #FF6F00;">Johan Archinard</h2>
+					<p><i>IT Engineer / IT Department</i></p>
 					<p>
 						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 						egestas eget quam. Vestibulum id ligula porta felis euismod
