modification du comportement des liens (nouvelle fenêtre)

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<h1>Pitch'Unicancer : (re)découvrez #Consore!</h1>
 							<p>Discover the features of our Unicancer powerful search engine</p>
 							<p>
-								<a class="btn btn-lg" style="background-color:#FB8C00; color:white;" href="https://www.youtube.com/watch?v=siQqInkygmk" role="button">Discover</a>
+								<a class="btn btn-lg" style="background-color:#FB8C00; color:white;" href="https://www.youtube.com/watch?v=siQqInkygmk" role="button" target="_blank">Discover</a>
 							</p>
 						</div>
 					</div>
@@ -116,7 +116,7 @@
 								<h1>Meetup FHIR France #8</h1>
 								<p>How we are involved in data standardization for data sharing in oncology.</p>
 								<p>
-									<a class="btn btn-lg" style="background-color:#43A047; color:white;" href="https://www.youtube.com/watch?v=1xjuEJeaY08" role="button">Watch it!</a>
+									<a class="btn btn-lg" style="background-color:#43A047; color:white;" href="https://www.youtube.com/watch?v=1xjuEJeaY08" role="button" target="_blank">Watch it!</a>
 								</p>
 							</div>
 						</div>
