--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					<p>
 						<i>Data Engineer</i>
 					</p>
-					<p>
+					<p style='text-align: justify;'>
 						Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
 						eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
 						amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor
@@ -224,7 +224,7 @@
 					<p>
 						<i>Data Scientist</i>
 					</p>
-					<p>
+					<p style='text-align: justify;'>
 						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
@@ -248,7 +248,7 @@
 					<p>
 						<i>DevOps Architect</i>
 					</p>
-					<p>
+					<p style='text-align: justify;'>
 						"At the end of my Engineering degree, I have worked in different
 						sectors, from Finance and Marketing to Aerospace and Defense, I
 						have gathered knowledge on those different experiences and taken
@@ -279,7 +279,7 @@
 
 					<h2 style="color: #FF6F00;">Jessica Henao Henao</h2>
 					<p><i>Data Scientist / Student</i></p>
-					<p>
+					<p style='text-align: justify;'>
 						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
@@ -297,12 +297,12 @@
 
 					<h2 style="color: #FF6F00;">Johan Archinard</h2>
 					<p><i>IT Engineer / IT Department</i></p>
-					<p>
+					<p style='text-align: justify;'>
 						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 						egestas eget quam. Vestibulum id ligula porta felis euismod
 						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
 						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
-						<a href="mailto:jessica.henao-henao@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="mailto:johan.archinard@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 					</p>
