--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 				<!-- /.col-lg-4 -->
 				<div class="col-lg-6">
 					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/jessica-circle.png" width="140" />
+					<img src="./images/Jessica-circle.png" width="140" />
 
 					<h2 style="color: #FF6F00;">Jessica Henao Henao</h2>
 					<p><i>Data Scientist / Student</i></p>
