--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
 						<i>Data Engineer</i>
 					</p>
 					<p style='text-align: justify;'>
-						Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
-						eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
-						amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor
-						mauris condimentum nibh. <br /> <a
+						"I joined the Data Factory in 2016 with a Master of Bioinformatics. As a Data Engineer,
+						I'm involved in the development of a data ecosystem in oncology and the growth of services 
+						for Institut Curie's stakeholders and beyond. Our objectives are to build and promote innovative
+						solutions for healthcare and cancer research."<br /> <a
 							href="mailto:thomas.balezeau@curie.fr"><i class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github"
