add Oliver's bio

--- a/index.html
+++ b/index.html
@@ -225,10 +225,11 @@
 						<i>Data Scientist</i>
 					</p>
 					<p style='text-align: justify;'>
-						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
-						egestas eget quam. Vestibulum id ligula porta felis euismod
-						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
+						"I am a Physics PhD specialized in Artificial Intelligence. After working as a research engineer 
+						in a biotechnology startup, I joined Institut Curie in 2018. As a Data Scientist, some of my tasks 
+						include developing Machine Learning solutions to perform automatic language recognition, 
+						designing and setting up data pipelines to improve our data ecosystem, 
+						and building other data-related services for our clinicians and researchers."<br />
 						<a href="mailto:oliver.hijano-cubelos@curie.fr"><i
 							class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
