add Johan's bio

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 						<a href="mailto:oliver.hijano-cubelos@curie.fr"><i
 							class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<i class="bi-github"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<i class="bi-linkedin"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<a href="https://github.com/oooliverrr"><i class="bi-github"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="https://www.linkedin.com/in/ohijanocubelos/en/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
@@ -281,10 +281,8 @@
 					<h2 style="color: #FF6F00;">Jessica Henao Henao</h2>
 					<p><i>Data Scientist / Student</i></p>
 					<p style='text-align: justify;'>
-						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
-						egestas eget quam. Vestibulum id ligula porta felis euismod
-						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
+						"In the system administration field for more than 10 years, I assist the Data Factory team 
+						in their projects. I'm bringing my experience in Kubernetes management and in the new and wild DevOps world."<br />
 						<a href="mailto:jessica.henao-henao@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
@@ -299,10 +297,8 @@
 					<h2 style="color: #FF6F00;">Johan Archinard</h2>
 					<p><i>IT Engineer / IT Department</i></p>
 					<p style='text-align: justify;'>
-						Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
-						egestas eget quam. Vestibulum id ligula porta felis euismod
-						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-						condimentum nibh, ut fermentum massa justo sit amet risus. <br />
+						"In the system administration field for more than 10 years, I assist the Data Factory team 
+						in their projects. I'm bringing my experience in Kubernetes management and in the new and wild DevOps world."<br />
 						<a href="mailto:johan.archinard@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
