--- a/index.html
+++ b/index.html
@@ -307,6 +307,14 @@
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<i class="bi-box-arrow-up-right"
+						style="font-size: 1.8rem; color: orange; float: left; padding-right: 16px;"></i>
+					<h1 style="color: #FF6F00;">Former members</h1>
+					<br />
+				</div>
+			</div>
 			<!-- /.row -->
 
 			<!-- START THE FEATURETTES -->
