--- a/index.html
+++ b/index.html
@@ -307,11 +307,12 @@
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
 			</div>
+			<hr class="featurette-divider">
 			<div class="row">
 				<div class="col-lg-12">
 					<i class="bi-box-arrow-up-right"
 						style="font-size: 1.8rem; color: orange; float: left; padding-right: 16px;"></i>
-					<h1 style="color: #FF6F00;">Former members</h1>
+					<h3 style="color: #FF6F00;">Former members</h3>
 					<br />
 				</div>
 			</div>
