--- a/index.html
+++ b/index.html
@@ -307,12 +307,18 @@
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
 			</div>
-			<hr class="featurette-divider">
+			<br />
 			<div class="row">
 				<div class="col-lg-12">
 					<i class="bi-box-arrow-up-right"
 						style="font-size: 1.8rem; color: orange; float: left; padding-right: 16px;"></i>
 					<h3 style="color: #FF6F00;">Former members</h3>
+					<ul>
+						<li>Amel Yahou <a href="https://www.linkedin.com/in/amel-yahou-592280132/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
+						<li>Oliver Hijano-Cubelos <a href="https://www.linkedin.com/in/ohijanocubelos/en/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
+					</ul>
 					<br />
 				</div>
 			</div>
