--- a/index.html
+++ b/index.html
@@ -218,24 +218,22 @@
 			<div class="row">
 				<div class="col-lg-6">
 					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/oliver-circle.png" width="140" />
+					<img src="./images/aurelien-circle.png" width="140" />
 
-					<h2 style="color: #FF6F00;">Oliver Hijano-Cubelos</h2>
+					<h2 style="color: #FF6F00;">Aurélien Legros</h2>
 					<p>
-						<i>Data Scientist</i>
+						<i>Data Engineer / Data Scientist</i>
 					</p>
 					<p style='text-align: justify;'>
-						"I am a Physics PhD specialized in Artificial Intelligence. After working as a research engineer 
-						in a biotechnology startup, I joined Institut Curie in 2018. As a Data Scientist, some of my tasks 
-						include developing Machine Learning solutions to perform automatic language recognition, 
-						designing and setting up data pipelines to improve our data ecosystem, 
-						and building other data-related services for our clinicians and researchers."<br />
-						<a href="mailto:oliver.hijano-cubelos@curie.fr"><i
+						"I've got a Master degree in Econometrics and Statistics. I've been working in different environments (
+						bank, insurance, Ville de Paris) before joining Institut Curie in 2021. I bring my experience in data quality processes
+						and I'm involved in the development of several key data projects which deal with collaborative science (Fairspace) and 
+						data pseudonymisation(Octopus).
+						"<br />
+						<a href="mailto:aurelien.legros@curie.fr"><i
 							class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<a href="https://github.com/oooliverrr"><i class="bi-github"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<a href="https://www.linkedin.com/in/ohijanocubelos/en/"><i class="bi-linkedin"
+						<a href="https://www.linkedin.com/in/aur%C3%A9lien-legros-94836313b/"><i class="bi-linkedin"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
