--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 						"I've got a Master degree in Econometrics and Statistics. I've been working in different environments (
 						bank, insurance, Ville de Paris) before joining Institut Curie in 2021. I bring my experience in data quality processes
 						and I'm involved in the development of several key data projects which deal with collaborative science (Fairspace) and 
-						data pseudonymisation(Octopus).
+						data pseudonymisation (Octopus).
 						"<br />
 						<a href="mailto:aurelien.legros@curie.fr"><i
 							class="bi-envelope"
@@ -279,8 +279,10 @@
 					<h2 style="color: #FF6F00;">Jessica Henao Henao</h2>
 					<p><i>Data Scientist / Student</i></p>
 					<p style='text-align: justify;'>
-						"In the system administration field for more than 10 years, I assist the Data Factory team 
-						in their projects. I'm bringing my experience in Kubernetes management and in the new and wild DevOps world."<br />
+						"I'm following a Master degree in Big Data and Data mining at University of Paris 8. In the meantime, I'm working within 
+						the Data Factory on the NEOSTRUCT project which aims to implement AI algorithms to predict pathologic complete response (pCR)
+						for patients with a breast cancer and treated by neoadjuvant chemotherapy. I'm also involved in data structuration and data
+						quality control processes."<br />
 						<a href="mailto:jessica.henao-henao@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
