--- a/index.html
+++ b/index.html
@@ -312,6 +312,25 @@
 			</div>
 			<br />
 			<div class="row">
+				<!-- /.col-lg-4 -->
+				<div class="col-lg-6">
+					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+					<img src="./images/victor-circle.png" width="140" />
+
+					<h2 style="color: #FF6F00;">Victor Nguyen</h2>
+					<p><i>Data Engineer</i></p>
+					<p style='text-align: justify;'>
+						""<br />
+						<a href="mailto:victor.nguyen@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+					</p>
+
+					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+				</div>
+			</div>
+			<br />
+			<div class="row">
 				<div class="col-lg-12">
 					<i class="bi-box-arrow-up-right"
 						style="font-size: 1.8rem; color: orange; float: left; padding-right: 16px;"></i>
