--- a/index.html
+++ b/index.html
@@ -282,7 +282,9 @@
 					<h2 style="color: #FF6F00;">Victor Nguyen</h2>
 					<p><i>Data Engineer</i></p>
 					<p style='text-align: justify;'>
-						""<br />
+						"I worked as Data Engineer apprentice at the French Ministry for Armed Forces, learning data analysis and processing for 3 years during my Engineering degree. 
+						At the end of my degree, I joined the Data Factory in september 2021 to work on the implementation of the CbioPortal in Curie and help the team 
+						to develop new products for innovation in healthcare."<br />
 						<a href="mailto:victor.nguyen@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
