--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 						to develop new products for innovation in healthcare."<br />
 						<a href="mailto:victor.nguyen@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<a href="https://www.linkedin.com/in/victor-nguyen-98aa431b0/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
@@ -303,7 +303,7 @@
 						in their projects. I'm bringing my experience in Kubernetes management and in the new and wild DevOps world."<br />
 						<a href="mailto:johan.archinard@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<a href="https://www.linkedin.com/in/archinardj/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
@@ -325,7 +325,30 @@
 						quality control processes."<br />
 						<a href="mailto:jessica.henao-henao@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<a href="https://www.linkedin.com/in/jessicahenaoh/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+					</p>
+
+					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+				</div>
+			</div>
+			<br />
+			<div class="row">
+				<!-- /.col-lg-4 -->
+				<div class="col-lg-6">
+					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+					<img src="./images/Jessica-circle.png" width="140" />
+
+					<h2 style="color: #FF6F00;">Pier-Francesco Rocci</h2>
+					<p><i>Data Engineer</i></p>
+					<p style='text-align: justify;'>
+						"I obtained a PhD in Physics at the Pierre and Marie Curie University. I spent the last 7 years mainly as Research Engineer 
+						in the field of aerospace working for CNRS/CNES working on the test and validation of scientific software and data pipeline.
+						After gained experience in the fields of data science and DevOps, I joined the Institut Curie in June 2022 as 
+						Support and Testing Engineer. I help the data team to design and implement test procedures to ensure that software programs 
+						perform as intended by the specifications."<br />
+						<a href="mailto:pier-francesco.rocci@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+						<a href="https://www.linkedin.com/in/pier-francesco-rocci/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
