--- a/index.html
+++ b/index.html
@@ -327,7 +327,6 @@
 						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
 						<a href="https://www.linkedin.com/in/jessicahenaoh/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
-
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
 				<div class="col-lg-6">
@@ -387,6 +386,12 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12">
+					<a href="https://doi.org/10.1186/s12885-022-09608-y"><b>Digital phenotyping in young breast cancer patients 
+					treated with neoadjuvant chemotherapy (the NeoFit Trial): protocol for a national, multicenter 
+					single-arm trial</b></a><br />Delrieu L, Hamy AS, Coussy F, 
+					Kassara A, Asselain B, Antero J, De Villèle P, Dumas E, Forstmann N, <u>Guérin J</u>, 
+					Hotton J, Jouannaud C, <u>Milder M</u>, <u>Leopold A</u>, Sedeaud A, Soibinet P, Toussaint JF, 
+					Vercamer V, Laas E, Reyal F<i>BMC Cancer. 2022 May 4;22(1):493. doi: 10.1186/s12885-022-09608-y.</i> <br /> <br />
 					<a href="https://doi.org/10.1200/CCI.20.00094"><b>OSIRIS:
 							A Minimum Data Set for Data Sharing and Interoperability in
 							Oncology</b></a><br /> <u>Guerin J</u>, Laizet Y, Le Texier V, Chanas L,
