--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 					<img src="./images/julien-circle.png" width="140" />
 					<h2 style="color: #FF6F00;">Julien Guérin</h2>
 					<p>
-						<i>Head of Data Factory</i>
+						<i>Chief Data Officer</i>
 					</p>
 					<p style='text-align: justify;'>
 						"After a master degree in Bioinformatics, I spent several years in
@@ -195,57 +195,12 @@
 				</div>
 				<!-- /.col-lg-4 -->
 				<div class="col-lg-6">
-					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/thomas-circle.png" width="140" />
-					<h2 style="color: #FF6F00;">Thomas Balezeau</h2>
-					<p>
-						<i>Data Engineer</i>
-					</p>
-					<p style='text-align: justify;'>
-						"I joined the Data Factory in 2016 with a Master of Bioinformatics. As a Data Engineer,
-						I'm involved in the development of a data ecosystem in oncology and the growth of services 
-						for Institut Curie's stakeholders and beyond. Our objectives are to build and promote innovative
-						solutions for healthcare and cancer research."<br /> <a
-							href="mailto:thomas.balezeau@curie.fr"><i class="bi-envelope"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<i class="bi-github"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-					</p>
-					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
-				</div>
-			</div>
-			<br />
-			<div class="row">
-				<div class="col-lg-6">
-					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/aurelien-circle.png" width="140" />
-
-					<h2 style="color: #FF6F00;">Aurélien Legros</h2>
-					<p>
-						<i>Data Engineer / Data Scientist</i>
-					</p>
-					<p style='text-align: justify;'>
-						"I've got a Master degree in Econometrics and Statistics. I've been working in different environments (
-						bank, insurance, Ville de Paris) before joining Institut Curie in 2021. I bring my experience in data quality processes
-						and I'm involved in the development of several key data projects which deal with collaborative science (Fairspace) and 
-						data pseudonymisation (Octopus).
-						"<br />
-						<a href="mailto:aurelien.legros@curie.fr"><i
-							class="bi-envelope"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<a href="https://www.linkedin.com/in/aur%C3%A9lien-legros-94836313b/"><i class="bi-linkedin"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-					</p>
-					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
-				</div>
-				<!-- /.col-lg-4 -->
-				<div class="col-lg-6">
 					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
 					<img src="./images/armand-circle.png" width="140" />
 
 					<h2 style="color: #FF6F00;">Armand Léopold</h2>
 					<p>
-						<i>DevOps Architect</i>
+						<i>Head of Data Factory / DevOps Architect</i>
 					</p>
 					<p style='text-align: justify;'>
 						"At the end of my Engineering degree, I have worked in different
@@ -271,6 +226,51 @@
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
+			</div>
+			<br />
+			<div class="row">
+				<div class="col-lg-6">
+					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+					<img src="./images/thomas-circle.png" width="140" />
+					<h2 style="color: #FF6F00;">Thomas Balezeau</h2>
+					<p>
+						<i>Lead Data Engineer</i>
+					</p>
+					<p style='text-align: justify;'>
+						"I joined the Data Factory in 2016 with a Master of Bioinformatics. As a Data Engineer,
+						I'm involved in the development of a data ecosystem in oncology and the growth of services 
+						for Institut Curie's stakeholders and beyond. Our objectives are to build and promote innovative
+						solutions for healthcare and cancer research."<br /> <a
+							href="mailto:thomas.balezeau@curie.fr"><i class="bi-envelope"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<i class="bi-github"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
+					</p>
+					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+				</div>
+				<div class="col-lg-6">
+					<!--         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+					<img src="./images/aurelien-circle.png" width="140" />
+
+					<h2 style="color: #FF6F00;">Aurélien Legros</h2>
+					<p>
+						<i>Data Engineer / Data Scientist</i>
+					</p>
+					<p style='text-align: justify;'>
+						"I've got a Master degree in Econometrics and Statistics. I've been working in different environments (
+						bank, insurance, Ville de Paris) before joining Institut Curie in 2021. I bring my experience in data quality processes
+						and I'm involved in the development of several key data projects which deal with collaborative science (Fairspace) and 
+						data pseudonymisation (Octopus).
+						"<br />
+						<a href="mailto:aurelien.legros@curie.fr"><i
+							class="bi-envelope"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+						<a href="https://www.linkedin.com/in/aur%C3%A9lien-legros-94836313b/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
+					</p>
+					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+				</div>
+				<!-- /.col-lg-4 -->
 			</div>
 			<br />
 			<div class="row">
@@ -337,7 +337,7 @@
 					<p><i>Data Engineer</i></p>
 					<p style='text-align: justify;'>
 						"I obtained a PhD in Physics at the Pierre and Marie Curie University. I spent the last 7 years mainly as Research Engineer 
-						in the field of aerospace working for CNRS/CNES working on the test and validation of scientific software and data pipeline.
+						in the field of aerospace working for CNRS/CNES on the test and validation of scientific software and data pipelines.
 						After gained experience in the fields of data science and DevOps, I joined the Institut Curie in June 2022 as 
 						Support and Testing Engineer. I help the data team to design and implement test procedures to ensure that software programs 
 						perform as intended by the specifications."<br />
@@ -391,7 +391,7 @@
 					single-arm trial</b></a><br />Delrieu L, Hamy AS, Coussy F, 
 					Kassara A, Asselain B, Antero J, De Villèle P, Dumas E, Forstmann N, <u>Guérin J</u>, 
 					Hotton J, Jouannaud C, <u>Milder M</u>, <u>Leopold A</u>, Sedeaud A, Soibinet P, Toussaint JF, 
-					Vercamer V, Laas E, Reyal F<i>BMC Cancer. 2022 May 4;22(1):493. doi: 10.1186/s12885-022-09608-y.</i> <br /> <br />
+					Vercamer V, Laas E, Reyal F. <i>BMC Cancer. 2022 May 4;22(1):493. doi: 10.1186/s12885-022-09608-y.</i> <br /> <br />
 					<a href="https://doi.org/10.1200/CCI.20.00094"><b>OSIRIS:
 							A Minimum Data Set for Data Sharing and Interoperability in
 							Oncology</b></a><br /> <u>Guerin J</u>, Laizet Y, Le Texier V, Chanas L,
