--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						IT consulting (Capgemini) working on big IT architectures for
 						public ministries. I joined Institut Curie in 2013 to develop an
 						institutional strategy for biological and clinical data
-						integration and analysis."<br /> <a
+						integration and analysis. Since september 2022, I'm leading the Data Office at Institut Curie."<br /> <a
 							href="mailto:julien.guerin@curie.fr"><i class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<a href="https://github.com/juguerin" target="_blank"><i
