--- a/index.html
+++ b/index.html
@@ -292,22 +292,6 @@
 
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
-				<div class="col-lg-6">
-					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/johan-circle.png" width="140" />
-
-					<h2 style="color: #FF6F00;">Johan Archinard</h2>
-					<p><i>IT Engineer / IT Department</i></p>
-					<p style='text-align: justify;'>
-						"In the system administration field for more than 10 years, I assist the Data Factory team 
-						in their projects. I'm bringing my experience in Kubernetes management and in the new and wild DevOps world."<br />
-						<a href="mailto:johan.archinard@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<a href="https://www.linkedin.com/in/archinardj/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-					</p>
-
-					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
-				</div>
 			</div>
 			<br />
 			<div class="row">
@@ -329,25 +313,6 @@
 					</p>
 					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
 				</div>
-				<div class="col-lg-6">
-					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/pier-francesco-circle.png" width="140" />
-
-					<h2 style="color: #FF6F00;">Pier-Francesco Rocci</h2>
-					<p><i>Data Engineer</i></p>
-					<p style='text-align: justify;'>
-						"I obtained a PhD in Physics at the Pierre and Marie Curie University. I spent the last 7 years mainly as Research Engineer 
-						in the field of aerospace working for CNRS/CNES on the test and validation of scientific software and data pipelines.
-						After gained experience in the fields of data science and DevOps, I joined the Institut Curie in June 2022 as 
-						Support and Testing Engineer. I help the data team to design and implement test procedures to ensure that software programs 
-						perform as intended by the specifications."<br />
-						<a href="mailto:pier-francesco.rocci@curie.fr"><i class="bi-envelope" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<i class="bi-github" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i>
-						<a href="https://www.linkedin.com/in/pier-francesco-rocci/"><i class="bi-linkedin" style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-					</p>
-
-					<!--         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
-				</div>
 			</div>
 			<br />
 			<div class="row">
@@ -365,6 +330,12 @@
 						<li>Amel Yahou <a href="https://www.linkedin.com/in/amel-yahou-592280132/"><i class="bi-linkedin"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
 						<li>Oliver Hijano-Cubelos <a href="https://www.linkedin.com/in/ohijanocubelos/en/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
+						<li>Pier-Francesco Rocci <a href="https://www.linkedin.com/in/pier-francesco-rocci/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
+						<li>Armand Léopold <a href="https://www.linkedin.com/in/armandleopold/"><i class="bi-linkedin"
+							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
+						<li>Johan Archinard <a href="https://www.linkedin.com/in/archinardj/"><i class="bi-linkedin"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a></li>
 					</ul>
 					<br />
