--- a/index.html
+++ b/index.html
@@ -196,30 +196,17 @@
 				<!-- /.col-lg-4 -->
 				<div class="col-lg-6">
 					<!--        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-					<img src="./images/armand-circle.png" width="140" />
+					<img src="./images/flavien-circle.png" width="140" />
 
-					<h2 style="color: #FF6F00;">Armand Léopold</h2>
+					<h2 style="color: #FF6F00;">Flavien Gilles</h2>
 					<p>
-						<i>Head of Data Factory / DevOps Architect</i>
+						<i>Head of Data Factory</i>
 					</p>
 					<p style='text-align: justify;'>
-						"At the end of my Engineering degree, I have worked in different
-						sectors, from Finance and Marketing to Aerospace and Defense, I
-						have gathered knowledge on those different experiences and taken
-						the most valuable lessons from them. Surfing on
-						the wave of data science and machine learning, I finally decided
-						to involve myself in a global and universal cause : Healthcare.
-						Arrived at the Institut Curie on 2nd of April 2019 to work
-						on a project of a Federated Machine learning platform, I have
-						since, expanded my duties within the Data Factory. Now I assume the function of DevOps Architect, making sure all our
-						data pipelines & development workflow run smoothly, securely and
-						reliably."<br /> <a href="mailto:armand.leopold@curie.fr"><i
+						"Coming soon..."<br /> <a href="mailto:flavien.gilles@curie.fr"><i
 							class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<a href="https://github.com/armandleopold"><i
-							class="bi-github"
-							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
-						<a href="https://www.linkedin.com/in/armandleopold/"><i
+						<a href="https://www.linkedin.com/in/flavien-gilles/"><i
 							class="bi-linkedin"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 					</p>
