add bio Flavien

--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
 						<i>Head of Data Factory</i>
 					</p>
 					<p style='text-align: justify;'>
-						"Coming soon..."<br /> <a href="mailto:flavien.gilles@curie.fr"><i
+						"After specializing in data science at the end of my engineering degree, I worked at a startup (Lifen) where I was first responsible for designing machine learning pipelines (mostly NLP) 
+						to extract data from medical documents. That went from defining the labelling strategy to experimenting with algorithms, evaluating and serving models in production. 
+						I eventually got to build and maintain data services around a data warehouse to support the data driven strategy of the company. After 5 years I decided to cross the bridge 
+						and joined Institut Curie as Head of Data Factory in May 2023."<br /> <a href="mailto:flavien.gilles@curie.fr"><i
 							class="bi-envelope"
 							style="font-size: 1.2rem; color: #FF6F00; padding-right: 7px;"></i></a>
 						<a href="https://www.linkedin.com/in/flavien-gilles/"><i
